Updated DipendenteRepository, SupervisoreRepository and created SupervisoreService, updated facade with new methods and written down tests.